[package]
name = "ryaml"
version = "0.5.1"
edition = "2024"
authors = ["Emma Harper Smith <emma@emmatyping.dev"]

[lib]
name = "ryaml"
crate-type = ["cdylib", "rlib"]

[features]
abi3 = ["pyo3/abi3-py310"]

[dependencies]
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }
pythonize = "0.26.0"

[dependencies.pyo3]
version = "0.26.0"
features = ["extension-module"]
