[package]
name = "ryaml"
version = "0.6.0"
edition = "2024"
authors = ["Emma Harper Smith <emma@emmatyping.dev"]

[lib]
name = "ryaml"
crate-type = ["cdylib", "rlib"]

[features]
abi3 = ["pyo3/abi3-py310"]

[dependencies]
libyaml-safer = "0.3.0"

[dependencies.pyo3]
version = "0.26.0"
features = ["extension-module"]
