[package]
name = "ryaml"
version = "0.6.0"
edition = "2024"
authors = ["Emma Harper Smith <emma@emmatyping.dev"]

[lib]
name = "ryaml"
crate-type = ["cdylib", "rlib"]

[features]
abi3 = ["pyo3/abi3-py310"]

[dependencies]
libyaml-safer = { path = "./libyaml-safer"}
base64 = "0.22"
rustc-hash = "2.1.1"

[dependencies.pyo3]
version = "0.28.1"
features = ["extension-module", "py-clone"]

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
