[build-system]
requires = [
    "maturin>=1.0,<2.0",
    "wheel",
]
build-backend = "maturin"

[project]
name = "ryaml"
version = "0.5.0"
description = "A simple yaml serializer and deserializer using Rust."
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "MIT"}
keywords = []
authors = [
    {name = "Emma Harper Smith", email = "emma@emmatyping.dev"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/emmatyping/ryaml"
repository = "https://github.com/emmatyping/ryaml"

[tool.maturin]
python-source = "py-src"
