[build-system]
requires = [
    "maturin>=1,<2",
    "wheel",
]
build-backend = "maturin"

[project]
name = "ryaml"
version = "0.6.0"
description = "A pyyaml compatible YAML 1.1 and 1.2 parser in Rust."
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "MIT"}
keywords = ["yaml", "parsing"]
authors = [
    { name = "Emma Harper Smith", email = "emma@emmatyping.dev" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/emmatyping/ryaml"
repository = "https://github.com/emmatyping/ryaml"

[tool.maturin]
python-source = "py-src"
module-name = "ryaml._ryaml"
include = [
    { format = "sdist", path = "tox.ini" },
    { format = "sdist", path = "Cargo.lock" },
    { format = "sdist", path = "examples/" },
]

[tool.cibuildwheel]
